[package]
name = "draw-waveform"
version = "0.0.1"
authors = ["Mika Viljanen <mika.viljanen@iki.fi>"]
edition = "2021"
publish = false

#[features]
#optimize = ["log/release_max_level_warn"]
#default = ["optimize"]

[dependencies]
#byteorder = "1"
#getrandom = "0.2"
#line_drawing = "1"
#randomize = "3"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.12.1"
rand = "0.8.5"
winit = "0.28.4"
winit_input_helper = "0.14.1"
